force-app/main/default/objects/cadmus_core__Doc_Config__c/cadmus_core__Doc_Config__c.object-meta.xml
<CustomObject>
    <label>Doc Config</label>
    <nameField>
        <label>Document Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>