force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__Config_MetaData__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Config_MetaData__c</fullName>
    <label>Config MetaData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>