force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__CustomerDocumentConfigId__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__CustomerDocumentConfigId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>GUID</description>
    <externalId>true</externalId>
    <label>Customer Document Config Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>