force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__Delivery_option__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Delivery_option__c</fullName>
    <label>Delivery option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATTACHMENTS</fullName>
            </value>
            <value>
                <fullName>ATTACHMENTS_OVERWRITE</fullName>
            </value>
            <value>
                <fullName>FILES</fullName>
                <default>true</default>
                <label>FILES</label>
            </value>
            <value>
                <fullName>FILES_OVERWRITE</fullName>
            </value>
            <value>
                <fullName>FILES_ADD_VERSION</fullName>
            </value>
            <value>
                <fullName>BASE64</fullName>
            </value>
            <value>
                <fullName>FILES_ASYNC</fullName>
                <isActive>false</isActive>
                <label>FILES ASYNC</label>
            </value>
            <value>
                <fullName>FILES_ADD_VERSION_ASYNC</fullName>
                <isActive>false</isActive>
                <label>FILES_ADD_VERSION ASYNC</label>
            </value>
            <value>
                <fullName>FILES_OVERWRITE_ASYNC</fullName>
                <isActive>false</isActive>
                <label>FILES_OVERWRITE ASYNC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>