force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__Description__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>