force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__Document_Title__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Document_Title__c</fullName>
    <inlineHelpText>Mergefields can be used to construct a dynamic document title</inlineHelpText>
    <label>Document Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>