force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__RecordTypeDeveloperName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeDeveloperName</label>
    <type>Text</type>
</CustomField>