force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeName</label>
    <type>Text</type>
</CustomField>