force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__Use_Salesforce_Data_Formatting__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Use_Salesforce_Data_Formatting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Data will not be transformed into PDF Butler data format but the Salesforce object model will be used. This saves processing as the data does not have to be transformed in PDF Butler format which would mean that we have to run through all records. This time it takes for looping through the records and formatting is now saved!</inlineHelpText>
    <label>Use Salesforce Data Formatting</label>
    <type>Checkbox</type>
</CustomField>