force-app/main/default/objects/cadmus_core__Doc_Config__c/fields/cadmus_core__View_Customer_DocConfig_Id__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__View_Customer_DocConfig_Id__c</fullName>
    <formula>cadmus_core__CustomerDocumentConfigId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Customer DocConfig Id</label>
    <type>Text</type>
</CustomField>