force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__CSV.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__CSV</fullName>
    <active>true</active>
    <description>Create CSV files directly from Salesforce data</description>
    <label>Character-separated values (CSV)</label>
</RecordType>