force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__EMAIL.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__EMAIL</fullName>
    <active>true</active>
    <description>Creates an email from your MS Word document and sent it via SFDC</description>
    <label>EMAIL</label>
</RecordType>