force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__MAIN.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__MAIN</fullName>
    <active>true</active>
    <description>Main document that can include multiple templates.</description>
    <label>Main Word Document</label>
</RecordType>