force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__MAIN_PPTX.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__MAIN_PPTX</fullName>
    <active>true</active>
    <label>Main Powerpoint Document</label>
</RecordType>