force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__MAIN_XLSX.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__MAIN_XLSX</fullName>
    <active>true</active>
    <description>Main Excel document</description>
    <label>Main Excel Document</label>
</RecordType>