force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__PDF.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__PDF</fullName>
    <active>true</active>
    <description>Add Static PDF documents</description>
    <label>Static PDF</label>
</RecordType>