force-app/main/default/objects/cadmus_core__Doc_Config__c/recordTypes/cadmus_core__TEMPLATE.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__TEMPLATE</fullName>
    <active>true</active>
    <description>Partial document that can be used on a &apos;Main Word Document&apos;</description>
    <label>Template Word Document</label>
</RecordType>