force-app/main/default/objects/cadmus_core__Doc_Config__c/listViews/cadmus_core__All.listView-meta.xml
<ListView>
    <fullName>cadmus_core__All</fullName>
    <columns>NAME</columns>
    <columns>cadmus_core__Document_Title__c</columns>
    <columns>cadmus_core__CustomerDocumentConfigId__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>