force-app/main/default/objects/cadmus_core__Doc_Config__c/listViews/cadmus_core__Main_Doc_Configs.listView-meta.xml
<ListView>
    <fullName>cadmus_core__Main_Doc_Configs</fullName>
    <columns>NAME</columns>
    <columns>cadmus_core__Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Main Doc Configs</label>
</ListView>